--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
     </main>
     <footer>
-        <img src="/static/BURFAM LOGO.png" alt="BURFAM Logo">
+        <img src="/static/BURFAM_LOGO.png" alt="BURFAM_Logo">
     </footer>
 </body>
 </html>
