--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OPS-Lens</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/RonetteObie/ops-lens-reports/main/styles.css">
     <script>
         let reportLinks = {}; // Store report links by store and report name
 
@@ -82,7 +82,7 @@
         </div>
     </main>
     <footer>
-        <img src="/static/BURFAM_LOGO.png" alt="BURFAM Logo">
+        <img src="https://raw.githubusercontent.com/RonetteObie/ops-lens-reports/main/BURFAM%20LOGO.png" alt="BURFAM Logo">
     </footer>
 </body>
 </html>
